--- a/craft_sicherungWebsite/templates/ueberUns/transparenz.html
+++ b/craft_sicherungWebsite/templates/ueberUns/transparenz.html
@@ -37,7 +37,7 @@
 
   {% set entry = craft.entries.section('ueberUns').slug('spendensiegel').one() %}
       <div style="padding-left: .8rem;">
-          <h3 style="padding-bottom: 1rem;">{{ entry.title }}</h3>
+          <h3 style="padding-bottom: 1rem; margin-left: -.8rem;">{{ entry.title }}</h3>
           <div id="copy" style="margin-left: -.8rem;"> {{ entry.anleser }} </div>
           <div id="copy" style="text-indent: -.8rem; margin-top: -1rem;"> {{ entry.text }} </div>
           <div id="copy" style="text-indent: -.8rem; margin-top: -1rem;"> {{ entry.langerText }} </div>
