--- a/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -24,7 +24,7 @@
 
       <!-- Chance Logo -->
       <a class="navbar-brand"  href="https://aufbau-website.de/craft/web/">
-        <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logo" alt="Logo" style="width: 160px; height: 160px;">
+        <img src="{{ craft.assets.filename('chance-logo-rgb.png').one().getUrl() }}" id="logo" alt="Logo" style="width: 160px; height: 141.5px;">
       </a>
 
 
@@ -143,7 +143,7 @@
                   <li class="dropdown-submenu">
                     <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a>
                     <ul class="dropdown-menu">
-                      <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li>
+                      <li class="dropdown-item"><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru</a></li>
                       <li class="dropdown-divider"></li>
                       <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li>
                       <li class="dropdown-divider"></li>
