--- a/craft_sicherungWebsite/templates/_layouts/weiterleitungkorrekt.html
+++ b/craft_sicherungWebsite/templates/_layouts/weiterleitungkorrekt.html
@@ -15,8 +15,14 @@
   {% set url = entry.url |replace({'fuer-sie': 'fuerSie'}) %}
   {% endif %}
 
+  {% if 'spendenfelder-und-so' in entry.url and 'fuer-sie' in entry.url %}
+  {% set url = entry.url |replace({'spendenfelder-und-so/fuer-sie': 'fuerSie'}) %}
+  {% endif %}
+
   <div class="col-md-4" style="padding: 0;">
+    <a href="{{url}}">
     <img class="img-fluid w-100 h-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </a>
   </div>
   <div class="col-md-8" style="padding: 3rem; background-color: #f8f5f2;">
     <h3> {{ entry.title }} </h3>
