--- a/craft_sicherungWebsite/templates/index.html
+++ b/craft_sicherungWebsite/templates/index.html
@@ -177,21 +177,7 @@
     </div>
   </div>
 
-
-  {% set entry = craft.entries.section('projekte').slug('kinderpate-werden').one() %}
-
-  <div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
-    <div class="container zwoelferspaltenlayout" style="padding-top: 1rem;">
-      <div class="row">
-      <div class="col-md-5" style="position: relative; min-height: 150px;">   <img class="mx-auto d-block" id="kind" style="max-width: 100%; bottom: 0; left: 0; " src="{{ entry.bild.inReverse().one().url }}"> </div>
-      <div class="col-md-7" style="padding-left: 2rem; padding-right: 2rem;">
-        <h4 style="color: white;"> {{ entry.title }} </h4>
-        <div id="copy" style="color: white;"> {{ entry.text }}</div>
-        <a href="https://aufbau-website.de/craft/web/spenden/jetztspenden.html" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
-      </div>
-    </div>
-  </div>
-  </div> <!-- Der orange Berg mit dem Spendenaufruf -->
+  {% include '_layouts/codeschnipsel/spendekontaktundhome' %}
 
 {% endblock %}
 {# Alles, was bis zu dem endblock-Tag kommt, überschreibt den Block in layoutHome #}
