--- a/craft_sicherungWebsite/templates/kontakt/index.html
+++ b/craft_sicherungWebsite/templates/kontakt/index.html
@@ -143,79 +143,7 @@
 </div>
 </div>
 
-{% set entry = craft.entries.section('projekte').slug('kinderpate-werden').one() %}
-<div class="container-fluid no-padding"  style="padding-top: 0; background-image: url({{ entry.bild.one().url }});">
-
-<div class="container zwoelferspaltenlayout" style="padding-bottom: 0;">
-
-  {% set entry = craft.entries.section('spenden').slug('50-euro').one() %}
-  <div class="row" style="padding-top: 1.5rem;">
-    <div class="col-sm-5" style="position: relative;">
-      <img id="kind" class="img-fluid w-100" style="padding-bottom: 0; position: absolute; bottom: 0;" src="{{ entry.bild.one().url }}">
-    </div>
-    <div class="col-sm-7" style="color: white;" id="copy">
-      <h3 style="color: white;">Geben Sie Menschen eine Chance!</h3>
-      <div> Egal ob Sie uns regelmäßig oder einmalig unterstützen – bei einem Verwaltungskostenanteil von max. acht Prozent kommen Ihre Spenden bei den Menschen an.  </div>
-      <hr style="border-width: 1px; margin-top: 1rem; margin-bottom: 1rem; border-color: white;">
-      <div style="padding-bottom: 1rem;"> Mit einer monatlichen Spende von </div>
-      <ul class="nav nav-pills" id="pills-tab" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link active tab" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">5 Euro</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tab" id="pills-profile-tab" data-toggle="pill" href="#pills-profile1" role="tab" aria-controls="pills-profile" aria-selected="false">20 Euro</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tab"id="pills-profile-tab" data-toggle="pill" href="#pills-profile2" role="tab" aria-controls="pills-profile" aria-selected="false">35 Euro</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link tab" id="pills-profile-tab" data-toggle="pill" href="#pills-profile3" role="tab" aria-controls="pills-profile" aria-selected="false">50 Euro</a>
-        </li>
-      </ul>
-
-      {% set entry = craft.entries.section('spenden').slug('5-euro').one() %}
-      <div class="tab-content" id="pills-tabContent" style="padding-top: 1rem;">
-        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-          <div> {{ entry.anleser }}  </div>
-        </div>
-        {% set entry = craft.entries.section('spenden').slug('20-euro').one() %}
-        <div class="tab-pane fade" id="pills-profile1" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <div> {{ entry.anleser }}  </div>
-        </div>
-        {% set entry = craft.entries.section('spenden').slug('35-euro').one() %}
-        <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <div> {{ entry.anleser }}  </div>
-        </div>
-        {% set entry = craft.entries.section('spenden').slug('50-euro').one() %}
-        <div class="tab-pane fade" id="pills-profile3" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <div> {{ entry.anleser }}  </div>
-        </div>
-      </div> <!-- Die Tabs mit den verschiedenen Auswirkungen der Spenden, wechselbar durch klicken -->
-      <hr style="border-width: 1px; margin-top: 1rem; margin-bottom: 1rem; border-color: white;">
-      <a style="margin-top: 1rem; margin-bottom: 3rem;" id="spendenlink" href="https://aufbau-website.de/craft/web/spenden/spende.html" class="btn btn-primary"> Jetzt Spenden </a>
-    </div>
-    </div> <!-- Umgebende Row -->
-  </div><!-- Umgebender Container -->
-</div>
-
-<style> /* Custom style für diese nav-tabs für die spenden-box */
- .nav-link.active.tab {
-  background-color: transparent;
-  color: white;
-  font-weight: bold;
-}
-
- .nav-link.tab {
-  font-size: 30px;
-  background-color: transparent;
-  color: white;
-  padding: 3rem;
-  padding-left: 0;
-  padding-bottom: 0;
-  padding-top: 0;
-}
-</style>
-
+{% include '_layouts/codeschnipsel/spendekontaktundhome' %}
 
 
 {% endblock %}
