--- a/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
+++ b/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
@@ -21,7 +21,7 @@
 
 <div class="container achterspaltenlayout" style="position: relative;">
   {% set entry = craft.entries.section('projekte').slug('erfahren-sie-mehr').one() %}
-    <h1> {{ entry.title }} </h1>
+    <h1 style="padding-bottom: 2rem;"> {{ entry.title }} </h1>
     <div id="anleser"> {{ entry.anleser }}</div>
   </div>
 </div>
@@ -59,15 +59,17 @@ function erfahrungenAnpassen () {
       {% for entry in entries %}
       <div class="card bg-white" style="border:10px solid #f8f5f2;">
         <div class="wrapper" style="background-color: #f8f5f2; max-height: 95px;">
+        <a href="{{ 'https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/' ~ entry.slug }}">
         <img class="card-img-top rounded-circle" style="border:8px solid #f8f5f2; max-height: 160px; max-width: 160px; display: block; margin-left: auto; margin-right: auto;  width: 50;"
         src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+        </a>
       </div>
         <div class="card-body" style="padding-top: 3rem;">
           <p class="card-text">
             <h3> {{ entry.title }} </h3>
             <div id="copy"> <strong> {{ entry.beruf }} </strong> </div>
             <div id="copy"> {{ entry.anleser }}
-              <a href="{{ 'https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/' ~ entry.slug }}"> Weiterlesen</a>
+              <a href="{{ 'https://aufbau-website.de/craft/web/projekte/erfahrungsberichte/' ~ entry.slug }}"> Weiterlesen > </a>
             </div>
           </p>
         </div>
