--- a/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -79,38 +79,11 @@ function zeigeBreadcrumb() {
     {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
 
     {% set entries = craft.entries.section('projekte').slug('der-fünf-stufen-plan').one().children().all() %}
-
-    <div id="accordion">
-
-      {% if entries | length %}        {% set counter = 0 %}
-
-      {% for entry in entries %} {% set counter = counter + 1 %}
-      <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 1px; margin-bottom: 20px;">
-        <div class="card-header bg-white">
-        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
-          <div class="row">
-            <div class="col-md-11 col-10">
-              <h4> {{ entry.title }} </h4>
-            </div>
-            <div class="col-md-1 col-2">
-              <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
-            </div>
-          </div>
-        </a>
-          </div>
-          <div id="{{counter}}" class="collapse" data-parent="#accordion">
-            <div class="card-body" id="copy">
-              {{ entry.text }}
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-        {% endif %}
-      </div>
+    {% include '_layouts/codeschnipsel/accordion' %}
 
   </div> <!-- Accordion - Div -->
 
-  <div class="container-fluid" style="padding-top: 5rem; background-color: #9EAC50" id="ziel">
+  <div class="container-fluid no-padding" style="padding-top: 5rem; background-color: #9EAC50" id="ziel">
     <div class="container achterspaltenlayout text-center">
       {% set entry = craft.entries.section('projekte').slug('das-ziel-starke-dörfer').one() %}
         <h2 style="color: #ffffff; padding-bottom: 1.5rem;"> {{ entry.title }} </h2>
@@ -163,12 +136,14 @@ function zeigeBreadcrumb() {
 <div class="container-fluid"  style="padding-top: 2.5rem; padding-bottom: 2.5rem; background-image: url({{ entry.bild.one().url }});">
   <div class="row">
     <div class="col-md-1">  </div>
-    <div class="col-md-2">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild.inReverse().one().url }}" style="max-height: 150px; padding-bottom: 10px;"> </div>
-    <div class="col-md-1">  </div>
+    <div class="col-md-3">   <img class="img-fluid mx-auto d-block" src="{{ entry.bild.inReverse().one().url }}" style="max-height: 150px; padding-bottom: 10px;"> </div>
     <div class="col-md-7" style="padding-left: 30px;">
-      <h4 style="color: white;"> {{ entry.title }} </h4>
+      <h3 style="color: white;"> {{ entry.title }} </h3>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
-      <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=D%C3%B6rfer%20Peru" class="btn btn-primary" id="copy" style="color: white;" role="button"> <strong> Dorfpate werden </strong></a>
+      <div style="display: flex; justify-content: space-evenly">
+      <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=D%C3%B6rfer%20Peru" class="btn btn-primary" id="copy" style="color: white;" role="button"> <strong> Dorfpate in Peru werden </strong></a>
+      <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=D%C3%B6rfer%20Kenia" class="btn btn-primary" id="copy" style="color: white;" role="button"> <strong> Dorfpate in Kenia werden </strong></a>
+    </div>
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
@@ -252,6 +227,10 @@ function zeigeBreadcrumb() {
   {% include "_layouts/weiterleitungmitzeilenumbruch" %}
 
   <div style="height: 2.5rem;"></div>
+
+  {% set entry = craft.entries.section('projekte').slug('themen').one() %}
+  {% include '_layouts/weiterleitungkorrekt' %}
+  <div style="height: 4rem;"></div>
 
 </div>
 
