--- a/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -63,43 +63,16 @@
 
 <div class="container achterspaltenlayout" id="video"></div>
 
-<div class="container achterspaltenlayout text-center" id="bestandteile" style="padding-top: 5rem; padding-bottom: 5rem;">
+<div class="container achterspaltenlayout text-center" id="bestandteile" style="padding-top: 5rem; padding-bottom: 0;">
   {% set entry = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one() %}
   <h2 style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
   <div id="anleser"> {{ entry.anleser }} </div>
   {% set akkordionBilder = craft.entries.section('spendenfelderUndSo').slug('akkordion-bilder').one() %}
-
+</div>
+<div class="container achterspaltenlayout" style="padding-bottom: 4rem;">
   {% set entries = craft.entries.section('projekte').slug('bestandteile-naturschutzprogramms').one().children().all() %}
+  {% include '_layouts/codeschnipsel/accordion' %}
 
-  <div id="accordion">
-
-    {# If there are any entries, loop through them #}
-    {% if entries | length %}        {% set counter = 0 %}
-
-    {% for entry in entries %} {% set counter = counter + 1 %}
-    <div class="card" style=" border-color: white; border-top-color: #ed6e2c; border-width: 1px; margin-bottom: 20px;">
-      <div class="card-header bg-white">
-        <a class="collapsed card-link" data-toggle="collapse" href="#{{counter}}">
-          <div class="row">
-            <div class="col-md-11 col-10">
-              <h4> {{ entry.title }} </h4>
-            </div>
-            <div class="col-md-1 col-2">
-              <img src="{{ akkordionBilder.bild.one().url }}" style="height: 1rem; float: right; margin-top: .25rem;">
-            </div>
-          </div>
-        </a>
-      </div>
-      <div id="{{counter}}" class="collapse" data-parent="#accordion">
-        <div class="card-body" id="copy">
-          {{ entry.text }}
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-    {% endif %}
-
-  </div>
 </div>
 
 <div class="container-fluid no-padding" style="background-color: #ffffff" id="ziel">
@@ -132,9 +105,9 @@
     <div class="col-md-1">  </div>
     <div class="col-md-3">   <img  style="position: relative; top: 50%; transform: translateY(-50%);" class="img-fluid mx-auto d-block" src="{% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}"> </div>
     <div class="col-md-7" style="padding-left: 30px;">
-      <h4 style="color: white;"> {{ entry.title }} </h4>
+      <h2 style="color: white; padding-bottom: 1rem;"> {{ entry.title }} </h2>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
-      <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/waldpate.html" class="btn btn-primary" role="button">Waldpate werden</a>
+      <a href="https://aufbau-website.de/craft/web/spenden/spende.html?spendenart=Naturschutz%20Peru" class="btn btn-primary" role="button">Waldpate werden</a>
     </div>
   </div>
 </div> <!-- Der orange Berg mit dem Spendenaufruf -->
@@ -193,9 +166,10 @@
     </div>
     {% endfor %}
   </div>
+  <a href="https://meinregenwald.de/"> <h3 style="color: #0062ae;"> Mehr Infos: www.meinregenwald.de </h3> </a>
 </div>
 
-<div class="container achterspaltenlayout text-center" style="padding-top: 5rem; padding-bottom: 0;" id="gelingendesLeben">
+<div class="container achterspaltenlayout text-center" style="padding-top: 6rem; padding-bottom: 0;" id="gelingendesLeben">
   {% set entry = craft.entries.section('projekte').slug('gelingenden-leben').one() %}
   <h2 style="padding-bottom: 2rem;"> {{ entry.title }} </h2>
   <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
@@ -215,8 +189,12 @@
   <div style="height: 2.5rem;"> </div>
 
   {% set entry = craft.entries.section('projekte').slug('kinderpate').one() %}
-
   {% include '_layouts/weiterleitungmitzeilenumbruch' %}
+  <div style="height: 2.5rem;"> </div>
+
+  {% set entry = craft.entries.section('projekte').slug('themen').one() %}
+  {% include '_layouts/weiterleitungkorrekt' %}
+  <div style="height: 2.5rem;"></div>
 
 </div> <!-- Weißer Hintergrund -->
 
