--- a/craft_sicherungWebsite/templates/spenden/schenkenundspenden.html
+++ b/craft_sicherungWebsite/templates/spenden/schenkenundspenden.html
@@ -14,7 +14,7 @@
   }
 </style>
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; padding-bottom: 3rem;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 8rem; padding-bottom: 3rem;">
 
   <nav aria-label="breadcrumb" id="info">
     <ol class="breadcrumb">
@@ -32,18 +32,18 @@
 </div>
 
 <div class="container-fluid no-padding" style="padding: 5rem 2rem; background-image: url({{ entry.bild.one().url }}); background-repeat: no-repeat;">
-  <div class="container zwoelferspaltenlayout" style="background-color: white; padding: 4rem 2rem;">
+  <div class="container zwoelferspaltenlayout" style="background-color: white; padding: 4rem 3rem;">
 
     {% set entry = craft.entries.section('spenden').slug('spenden-und-schenken').one() %}
     <div id="copy"> {{ entry.text }}</div>
 
-    <div class="row">
+    <div class="row" style="padding: 1rem 0;">
       <div class="col-sm-1"> </div>
       <div class="col-sm-5"> <img class="img-fluid" style="padding-bottom: 0;" src=" {% if entry.bild.one() is not null %} {{ entry.bild.one().url }} {% endif %}" alt="schenken1">   </div>
       <div class="col-sm-5"> <img class="img-fluid" style="padding-bottom: 0;" src=" {% if entry.bild2.one() is not null %} {{ entry.bild2.one().url }} {% endif %}" alt="schenken2">   </div>
     </div>
 
-    <div id="copy" style="padding-left: 3rem; padding-right: 3rem;"> {{ entry.zusatzfeld1 }}
+    <div id="copy"> {{ entry.zusatzfeld1 }}
     </div>
   </div>
 
